--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,8 +9,7 @@ header {
     color: #fff;
     text-shadow: 0px 2px 0px #4b2e83;
   }
-  background: #4b2e83;
-  background: url(../images/uwlogo.png) no-repeat;
+  background: #4b2e83 url(../images/uwlogo.png) no-repeat;
   background-position: right;
   background-size: auto 80%;
 }
