add active button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <li><a href="{{ site.viscog.people_url }}" class="button"><strong>People</strong></a></li>
             <li><a href="{{ site.viscog.research_url }}" class="button"><strong>Research</strong></a></li>
             <li><a href="{{ site.viscog.publications_url }}" class="button"><strong>Publications</strong></a></li>
+            <li><a href="" class="button active"><strong>Code</strong></a></li>
             <li><a href="{{ site.viscog.contact_url }}" class="button"><strong>Contact</strong></a></li>
           </ul>
         </div>
