highlight code button

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,7 +30,7 @@ blockquote {
   border: 1px solid #959595;
   background: linear-gradient(#b7b7b7, #d9d9d9);
 }
-#banner .button:hover, #banner .button:active {
+#banner .button:hover, #banner .active {
   background: linear-gradient(#d9d9d9, #fafafa);
   background-color: #959595;
 }
